# pytvt

./: .copilotignore  .env.example  .gitattributes  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  MANIFEST.in  MIGRATION.md  README.md  RELEASE_NOTES.md  config.json  enable_nvr_services.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tvt_discovery.py  tvt_nvr_api.py  tvt_protocol.py  tvt_snapshot.py
.github/: PULL_REQUEST_TEMPLATE.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
bridges/sdk_local/: scan_nvr.mjs
docs/: FACE_RECOGNITION.md  FIELD_LEARNINGS.md  LPR_EVENT_INGESTION.md  PACKAGE_OVERVIEW.md  PUBLIC_SURFACE.md  platform_sdk.md
docs/ai/handoffs/: codex-t1699-face-event-time.md
research/: README.md  backup_crypto_probe.py  capture_sdk.sh  parse_pcap.py  sdk_login.cjs  sdk_login.py  test_sha1.mjs  test_sha1.py  verify_capture.py  verify_pw.py
src/pytvt/: __init__.py  __main__.py  _crypto.py  alarm_protocol.py  alarm_server.py  cli.py  config.py  connection_pool.py  constants.py  device_manager.py  diagnostics.py  diff.py  discovery.py  exceptions.py  models.py  nvr_api.py  output.py  platform_alarms.py  platform_capabilities.py  platform_classification.py  platform_health.py  platform_inventory.py  platform_topology.py  protocol.py  registry.py  scanner.py  sdk_http.py  sdk_http_client.py  sdk_local.py  snapshot.py  status_log.py  workflow_cli.py  xml_api.py
src/pytvt/capabilities/: __init__.py
src/pytvt/device_sdk/: __init__.py  bindings.py  client.py  constants.py  http_client.py  ip_modify.py  loader.py  manager.py  model_capabilities.py  plate_events.py  sdk_http.py  sdk_local.py  types.py
src/pytvt/management/: __init__.py  client.py  context.py  platform_constants.py  sdk.py  sdk_contract.py  sdk_namespace.py  sdk_symbols.py  sidecar.py
src/pytvt/netsdk/: __init__.py  bindings.py  client.py  constants.py  ip_modify.py  loader.py  types.py
src/pytvt/platform_sdk/: __init__.py  alarms.py  base.py  capabilities.py  classification.py  client.py  context.py  exceptions.py  health.py  inventory.py  models.py  native.py  platform_backend.py  platform_constants.py  platform_models.py  sdk.py  sdk_namespace.py  sdk_symbols.py  sidecar.py  topology.py  web_backend.py  web_crypto.py  web_envelope.py  web_models.py  web_session.py
src/pytvt/sdk/: nat_capabilities.md
tests/: conftest.py  test_alarm_protocol.py  test_architecture.py  test_backup_crypto_probe.py  test_cli.py  test_config.py  test_connection_pool.py  test_crypto.py  test_device_manager.py  test_diff.py  test_discovery.py  test_face_api.py  test_ipc_password_status.py  test_management.py  test_model_capabilities.py  test_models.py  test_netsdk_client.py  test_netsdk_constants.py  test_netsdk_ip_modify.py  test_netsdk_loader.py  test_netsdk_types.py  test_nvr_api.py  test_output.py  test_plate_events.py  test_plate_subscription.py  test_platform_operations.py  test_platform_sdk.py  test_protocol.py  test_python_only_guardrail.py  test_rtsp_snapshot_backend.py  test_scanner.py  test_sdk_http.py  test_sdk_http_client.py  test_sdk_local.py  test_status_log.py  test_web_alarms.py  test_web_backend.py  test_web_client_selection.py  test_web_crypto.py  test_web_logs.py  (+7 more)
tests/fixtures/: legacy_scan_nvr_payload.json
tools/: README.md  capture_sdk.sh  check_python_only.py  enable_nvr_services.py  management_live_validate.py  management_report_summary.py  management_validation_lib.py  manifest_resolver.py  parse_pcap.py  sdk_comparator.py  sdk_login.cjs  test_sha1.mjs  validate_platform_inventory.py  verify_capture.py  verify_pw.py
(+21 files in other folders)
